<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_matchlist_gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5">

    <TextView
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAlignment="center"
        android:text="@string/match" />

    <TextView
        android:id="@+id/textView2"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAlignment="center"
        android:text="@string/red_1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAlignment="center"
        android:text="@string/red_2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAlignment="center"
        android:text="@string/blue_1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_row="0"
        android:layout_column="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAlignment="center"
        android:text="@string/blue_2" />

</GridLayout>